--- a/references.bib
+++ b/references.bib
@@ -76,3 +76,17 @@ Publisher: American Psychological Association}
 Publisher: Nature Publishing Group},
 	langid = {en}
 }
+
+@article{wallace2022,
+	title = {Towards Individuated Reading Experiences: Different Fonts Increase Reading Speed for Different Individuals},
+	author = {Wallace, Shaun and Bylinskii, Zoya and Dobres, Jonathan and Kerr, Bernard and Berlow, Sam and Treitman, Rick and Kumawat, Nirmal and Arpin, Kathleen and Miller, Dave B. and Huang, Jeff and Sawyer, Ben D.},
+	year = {2022},
+	month = {03},
+	date = {2022-03-31},
+	journal = {ACM Transactions on Computer-Human Interaction},
+	pages = {38:1{\textendash}38:56},
+	volume = {29},
+	number = {4},
+	doi = {10.1145/3502222},
+	url = {https://dl.acm.org/doi/10.1145/3502222}
+}
