--- a/postscript.qmd
+++ b/postscript.qmd
@@ -1,6 +1,6 @@
 # Postscript {#sec-postscript .unnumbered}
 
-Whilst putting these materials together I encountered a [Tim Harford article in the Financial Times about Subtraction Neglect Bias](https://www.ft.com/content/eb616ad3-e680-4161-9e20-53c4607cb609) (Link only accessible to FT subscribers).
+Whilst putting these materials together I encountered a [Tim Harford article in the Financial Times about Subtraction Neglect Bias](https://www.ft.com/content/eb616ad3-e680-4161-9e20-53c4607cb609) (Link only accessible to FT subscribers) .
 
 Subtraction Neglect Bias is the cognitive bias humans have towards problem solving of adding instead of subtracting.
 
@@ -8,7 +8,7 @@ I experience this bias all the time, either in my own behaviour or observing oth
 
 Obviously, adding something to an existing situation is often the right way to solve a problem, but frequently removing something would be a better solution.
 
-I assume there is something cognitively painful about subtraction as compared with the cognitive reward of addition that biases us towards addition.
+I assume there is something cognitively painful about subtraction as compared with a cognitive reward of addition that biases us towards addition. A form of [loss aversion](https://en.wikipedia.org/wiki/Loss_aversion)?
 
 Anyhow, if you are reading this you may be wondering what that's got to do with webpage design? Everything, I'd say. But it also has a lot to do with lots of other things we do at work or at home so I thought I add this little rant at the end (see what I did there?)
 
