--- a/how-people-read-webpages.qmd
+++ b/how-people-read-webpages.qmd
@@ -16,7 +16,7 @@ The hypothesis NN/g present for why we scan is because users are often looking f
 
 The behaviour is similar to that of [desire lines](https://en.wikipedia.org/wiki/Desire_path), humans seeking out the most efficient (or lazy if you prefer) way to do things. Users have found that scanning on the web is more efficient than reading for extracting information.
 
-NN/g observe we scan in a variety of [gaze patterns](https://www.nngroup.com/articles/text-scanning-patterns-eyetracking/) and therefore we should design and structure our pages for ease of scanning.
+NN/g observe we scan in a variety of [gaze patterns](https://www.nngroup.com/articles/text-scanning-patterns-eyetracking/) and therefore we should design and structure our pages for ease of scanning. NN/g also discuss this in their article about [formatting pages for long form content](https://www.nngroup.com/articles/formatting-long-form-content/).
 
 ## Working memory {#sec-working-memory}
 
@@ -40,7 +40,7 @@ In @sec-how-to-write-for-the-web I outline some practical ways to improve writin
 
 -   how and at what level of detail to present the content to them
 
-Careful consideration increases the likelihood of creating relevant content in an appropriate form, as opposed to a long winded page that no-one reads. For the reasons outlined in @sec-working-memory.
+Careful consideration increases the likelihood of creating relevant content in an appropriate form, as opposed to a long winded page that no-one reads. For the reasons outlined in @sec-working-memory. See also the [postscript](#sec-postscript).
 
 ## How to structure a webpage for ease of scanning {#sec-how-to-structure-a-webpage-for-ease-of-scanning}
 
@@ -53,8 +53,6 @@ The UK Government Digital Service [redesigned their website](https://insidegovuk
 Hence the Summary at the start of this chapter page.
 
 This approach is also reflected in the [inverted pyramid](https://www.nngroup.com/articles/inverted-pyramid/) strategy where the information most likely to engage the user comes first, followed by the secondary, tertiary etc. information. Those who want detail can find it further down the page, but those who are only interested in the main point are served it immediately.
-
-<https://www.nngroup.com/articles/formatting-long-form-content/>
 
 ### Use informative headings {#sec-use-informative-headings}
 
@@ -86,6 +84,6 @@ This study implies that to account for individual variation it would be preferab
 
 Therefore to maximise accessibility (see @sec-designing-for-accessibility) what matters is to choose a legible font and size.
 
-There is no WCAG standard for font size, but but for reference the GDS use a default paragraph font size is 19px on large screens and 16px on small screens following the recommendations of the [British Dyslexia Society](https://www.bdadyslexia.org.uk/advice/employers/creating-a-dyslexia-friendly-workplace/dyslexia-friendly-style-guide) not use fonts smaller than 12pt, approximately equivalent to 16px or 1rem.
+There is no WCAG standard for font size or font face, but but for reference the GDS use a default paragraph font size is 19px on large screens and 16px on small screens. This follows the recommendations of the [British Dyslexia Society](https://www.bdadyslexia.org.uk/advice/employers/creating-a-dyslexia-friendly-workplace/dyslexia-friendly-style-guide) not use fonts smaller than 12pt, approximately equivalent to 16px or 1rem. Suggested fonts for legibility are serif fonts such as Calibri, Arial or Garamond, but remember to be consistent across pages on the same site.
 
 Here I have set a base font size of 18px and am using the [Atkinson Hyperlegible](https://brailleinstitute.org/freefont) font designed by the Braille Institute.
