--- a/how-to-use-imagery-and-visuals.qmd
+++ b/how-to-use-imagery-and-visuals.qmd
@@ -1,7 +1,7 @@
 # Using imagery and visuals {#sec-using-imagery-and-visuals}
 
 ::: {.callout-important .unnumbered title="Summary" appearance="simple" icon="false"}
-Use images carefully. Imagery can help create ambiance, impart information or orientate the user. But images should not be used to provide information alone. Images slow down page loading and increase scrolling and scanning time, especially on mobile devices.
+There are lots of trade-offs when using imagery. Imagery can help create ambiance, impart information or orientate the user. But images should not be used to provide information alone. Images slow down page loading and increase scrolling and scanning time, especially on mobile devices.
 :::
 
 ## How to use images {#sec-misconceptions-about-users-and-images}
@@ -14,15 +14,19 @@ Images can also make scanning more difficult and increase scrolling time, especi
 
 Therefore use images carefully and consider the trade-off in either including or excluding an image or visualisation.
 
+::: callout-tip
+"Services usually work best without relying on images. Focus on writing clear, simple content for your service first." [GOV.UK Design System: Images](https://design-system.service.gov.uk/styles/images/)
+:::
+
 ## Types of images
 
 ### Informative images
 
--   Photographs:
+-   Photographs: if you need to show a lifelike representation of something such as a piece of equipment or room that can be booked.
 
--   Illustrations:
+-   Illustrations: useful for implication of a complex process.
 
--   Icons and logos:
+-   Icons and logos: used to represent menus, actions or objects and can orientate the user on the page as they are easy to scan. However, icons don't have universal meaning and are open to misinterpretation.
 
 -   Infographics and data visualisations:
 
