--- a/how-people-access-webpages.qmd
+++ b/how-people-access-webpages.qmd
@@ -40,16 +40,16 @@ There is of course lots more detail on the [NN/g: Optimizing for Context in the 
 
 ## Designing for accessibility {#sec-designing-for-accessibility}
 
-::: {#accessiblity-checklist .callout-tip}
-## A minimal checklist for an accessible text and links webpage
-
+::: {#accessiblity-checklist .callout-tip title="A minimal checklist for an accessible text and links webpage"}
 -   Are the headings sufficiently informative to enable navigation using a screen reader?
 
 -   Is the contrast ratio between text colour and background colour accessible?
 
 -   Is the font size accessible and legible? (See @sec-fonts-matter)
 
--   Have any visuals got the correct alt-text?
+-   Have any visuals got alt text? (See @sec-making-imagery-accessible)
+
+-   Have you checked you page using an accessibility checker? (Such as [WAVE Web Accessibility Evaluation Tool](https://wave.webaim.org/))
 :::
 
 The World Wide Web Consortium (W3C) [Web Content Accessibility Guidelines (WCAG) 2.2](https://www.w3.org/TR/WCAG22/) are a set of recommendations for web accessibility to improve inclusion of users with impairments to their:
@@ -69,6 +69,12 @@ These guidelines follow four design principles:
 3.  Understandable
 4.  Robust
 
-The WCAG provide a [Quick Reference](https://www.w3.org/WAI/WCAG22/quickref/) which has examples, but is ironically a bit overwhelming!
+The University is expected to meet the WCAG AA standard for accessibility.
 
-Given that in the library we are concerned with pages primarily consisting of text and links, the [University of Washington Accessibility Checklist](https://www.washington.edu/accesstech/checklist/) provides more concise guidance, but with more detail than the minimal list at the start of this section.
+The WCAG provide a [Quick Reference](https://www.w3.org/WAI/WCAG22/quickref/) which has examples, but is ironically a bit overwhelming! [WebAIM](https://webaim.org/) provide an in-depth [WCAG 2.2. AA checklist](https://webaim.org/standards/wcag/checklist) too that is slightly easier to use.
+
+WebAIM also provide many tools, including their [WAVE Web Accessibility Evaluation Tool](https://wave.webaim.org/) which can highlight issues on your page.
+
+As library pages primarily consist of text and links, the [University of Washington Accessibility Checklist](https://www.washington.edu/accesstech/checklist/) may provide sufficiently concise guidance, but with more detail than the minimal list at the start of this section.
+
+It may not be possible to achieve perfect accessibility due to the trade-offs one encounters between competing user needs, but the important thing is to try.
