--- a/index.qmd
+++ b/index.qmd
@@ -6,6 +6,8 @@ bibliography: references.bib
 
 This short book has been created as a resource for librarians at the University of Southampton. It aims to aggregate the most pertinent information available about how to create effective webpages for library users.
 
+As library webpages consist largely of text and links, they are the focus of this book. The scope does extend to images, but not to video or other media. However, most of the considerations that apply to images, apply to videos and other media.
+
 The material presented here encourages you to consider what we know about what works and why, rather than present a rigid framework that you must follow.
 
 The overarching questions under consideration are:
